--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,6 @@
 {
     "python.linting.pylintEnabled": true,
     "python.linting.flake8Enabled": false,
-    "python.linting.enabled": false,
-    "python.linting.pylintArgs":[
-        "--extension-pkg-whitelist=pygame",
-        "--erros-only"
-  ]
+    "python.linting.enabled": false
     
 }
